# nasa_avionics_data_ml

./: .envrc  flake.nix  pyproject.toml  requirements.txt
nasa_avionics_data_ml/: LSTM.py  cpu_model.torch  letsql_training_and_inference.py  letsql_udaf_training.py  letsql_udwf_inference.py  lib.py  nasa_data_funcs.py  rnn_rand_multiflight_loop_batch_airborne.py  scales.pkl  settings.py  zip_data.py  zip_names.py
notebooks/: Altitude_visualization.py  NASA_data_exploration.py  elevation_visualization.py  final_model_visualizations.py  model_analysis.py  udwf-inference-evaluated.ipynb  udwf-inference.ipynb
scripts/: ensure-venv.sh  make-venv.sh  populate-venv.sh
