[tool.poetry]
name = "nasa_avionics_data_ml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.29.0"
matplotlib = "^3.9.2"
torch = "2.0"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
numpy = "<2"
attrs = "^24.2.0"
pyarrow = "^18.0.0"
ruff = "^0.7.2"
letsql = "0.1.10"
# letsql = {git = "file:///home/dan/repos/github/letsql", rev = "3b783e5495f5c29e2b1db36e5614b64d28445623"}
trino = "^0.330.0"
duckdb = "^1.1.3"
jupyter = "^1.1.1"
nbconvert = "^7.16.4"
jupyter-contrib-nbextensions = "^0.7.0"
notebook = ">6"
codetiming = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
