[project]
name = "nasa_avionics_data_ml"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "attrs",
    "codetiming",
    "dask>=2024.12.0",
    "duckdb",
    "ipython",
    "letsql==0.1.11",
    "matplotlib",
    "notebook",
    "numpy<2",
    "pandas",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "torch==2.*",
    "trino",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nasa_avionics_data_ml"]

# https://docs.astral.sh/uv/guides/integration/pytorch/#__tabbed_1_2
[[tool.uv.index]]
name = "pytorch-cu117"
url = "https://download.pytorch.org/whl/cu117"
explicit = true

[tool.uv.sources]
torch = [
  # { index = "pytorch-cu118", marker = "platform_system != 'Darwin'"},
  { index = "pytorch-cu117" },
]
